# Home_Bookkeeping

./: .gitmodules  README.md  actual tasks.txt  package-lock.json  package.json
Development/: BookKeeping.cpp  BookKeeping.h  CMakeLists.txt  FuncCategories.cpp  FuncCategories.h  GlobalCategories.cpp  GlobalCategories.h  GlobalSubCategories.cpp  GlobalSubCategories.h  GlobalTransactionTypes.h  GlobalTransactionTypesStatuses.h  Home_Bookkeeping.h  RepAccounts.cpp  RepAccounts.h  RepCategories.cpp  RepCategories.h  RepComments.cpp  RepComments.h  RepCurrencies.cpp  RepCurrencies.h  RepCurrencyExchangeRates.cpp  RepCurrencyExchangeRates.h  RepDescriptions.cpp  RepDescriptions.h  RepPayees.cpp  RepPayees.h  RepSubCategories.cpp  RepSubCategories.h  RepTags.cpp  RepTags.h  RepTransactions.cpp  RepTransactions.h  TransactionStatuses.h  main.cpp  stdafx.h
Development/0_Models/: Account.cpp  Account.h  Category.cpp  Category.h  Comment.cpp  Comment.h  Currency.cpp  Currency.h  CurrencyRate.cpp  Description.cpp  Description.h  Model.cpp  Model.h  Payee.cpp  Payee.h  Status.cpp  Status.h  Tag.cpp  Tag.h  Time.cpp  Time.h  Transaction.cpp  Transaction.h  TransactionStatus.cpp  TransactionStatus.h  TransactionType.cpp  TransactionType.h  Type.cpp  Type.h
Development/1_DataAccess/: AccountRepository.cpp  AccountRepository.h  BookKeepingRepository.cpp  BookKeepingRepository.h  CategoryRepository.cpp  CategoryRepository.h  CommentRepository.cpp  CommentRepository.h  CurrencyRateRepository.cpp  CurrencyRateRepository.h  CurrencyRepository.cpp  CurrencyRepository.h  DescriptionRepository.cpp  DescriptionRepository.h  FinanceRepository.cpp  FinanceRepository.h  PayeeRepository.cpp  PayeeRepository.h  TagRepository.cpp  TagRepository.h  TransactionRepository.cpp  TransactionRepository.h
Development/2_BusinessLogic/: DatabaseManager.cpp  DatabaseManager.h  FinanceRepository.cpp  FinanceRepository.h  TransactionsFunctions.h  basic_features.cpp  database.cpp  default.cpp  defaultRepository.cpp  defaultRepository.h  printRepository.h  sum.cpp  sumTransactions.cpp  sumTransactions.h
Development/3_GUI/: GUI.h  Graph.h  Graph_Additional.cpp  Point.cpp  Point.h  Window_AddAccount.cpp  Window_AddAccount.h  Window_AddTransactionExpense.cpp  Window_AddTransactionExpense.h  Window_AddTransactionIncome.cpp  Window_AddTransactionIncome.h  Window_AddTransactionTransfer.cpp  Window_AddTransactionTransfer.h  Window_Main.cpp  Window_Main.h
Development/BusinessLogic/: TransactionsFunctions.h  defaultRepository.h  printRepository.cpp  printRepository.h  sumTransactions.cpp  sumTransactions.h
Development/DataAccess/: AccountRepository.cpp  AccountRepository.h  BookKeepingRepository.cpp  BookKeepingRepository.h  CategoryRepository.h  CategorySubRepository.cpp  CategorySubRepository.h  CommentRepository.cpp  CommentRepository.h  CurrencyRateRepository.h  CurrencyRepository.h  DescriptionRepository.cpp  DescriptionRepository.h  PayeeRepository.h  TagRepository.h  TransactionRepository.h
Development/GUI/: GUI.cpp  Graph.cpp  Graph_Additional.cpp  Graph_Additional.h  HomeBookkeepingLib.cpp  HomeBookkeepingLib.h  MyLib.cpp  MyLib.h  Simple_window.cpp  Simple_window.h  Window.cpp  Window.h  Window_AddAccount.cpp  Window_AddAccount.h  Window_AddTransactionExpense.cpp  Window_AddTransactionExpense.h  Window_AddTransactionIncome.cpp  Window_AddTransactionIncome.h  Window_AddTransactionTransfer.cpp  Window_AddTransactionTransfer.h  Window_Main.cpp  Window_Main.h
Development/Home_Bookkeeping/: CMakeLists.txt  main.cpp
Development/Home_Bookkeeping/0_Models/: Account.cpp  Account.h  CMakeLists.txt  Category.cpp  Category.h  Comment.cpp  Comment.h  Currency.cpp  Currency.h  Description.cpp  Description.h  Model.cpp  Model.h  Payee.cpp  Payee.h  Status.cpp  Status.h  Tag.cpp  Tag.h  TimeDate.cpp  TimeDate.h  Transaction.cpp  Transaction.h  Type.cpp  Type.h
Development/Home_Bookkeeping/1_DataAccess/: AccountRepository.cpp  AccountRepository.h  CMakeLists.txt  CategoryRepository.cpp  CategoryRepository.h  CommentRepository.cpp  CommentRepository.h  CurrencyRepository.cpp  CurrencyRepository.h  DescriptionRepository.cpp  DescriptionRepository.h  PayeeRepository.cpp  PayeeRepository.h  TagRepository.cpp  TagRepository.h  TransactionRepository.cpp  TransactionRepository.h
Development/Home_Bookkeeping/2_BusinessLogic/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  FinanceRepository.cpp  FinanceRepository.h
Development/Home_Bookkeeping/lib/: CMakeLists.txt
Development/Models/: Account.cpp  Account.h  Category.cpp  Category.h  CategorySub.cpp  CategorySub.h  Comment.cpp  Comment.h  Currency.cpp  Currency.h  CurrencyRate.cpp  CurrencyRate.h  Description.cpp  Description.h  Payee.cpp  Payee.h  Tag.cpp  Tag.h  Time.cpp  Time.h  Transaction.cpp  Transaction.h  TransactionStatus.cpp  TransactionStatus.h  TransactionType.cpp  TransactionType.h
Development/Tests/: CMakeLists.txt  test.cpp
Development/include/: 0_Models.h  1_DataAccess.h  1_DataAccess_Additional.h  1_DataAccess_Main.h  2_BusinessLogic.h  3_GUI.h  BusinessLogic.h  CMakeLists.txt  DataAccess.h  DataAccess1.h  DataAccess2.h  FLTK.h  Functions.h  Graphics.h  Models.h  constants.h  includeDataAccess1.h  includeDataAccess2.h  stdafx.h
Development/include/0_Models/: Account.cpp  Account.h  CMakeLists.txt  Category.cpp  Category.h  Comment.cpp  Comment.h  Currency.cpp  Currency.h  Description.cpp  Description.h  Model.cpp  Model.h  Payee.cpp  Payee.h  Status.cpp  Status.h  Tag.cpp  Tag.h  TimeDate.cpp  TimeDate.h  Transaction.cpp  Transaction.h  Type.cpp  Type.h
Development/include/1_DataAccess/: AccountDatabase.cpp  AccountDatabase.h  AccountRepository.cpp  AccountRepository.h  CMakeLists.txt  CategoryDatabase.cpp  CategoryDatabase.h  CategoryRepository.cpp  CategoryRepository.h  CommentDatabase.cpp  (+25 more)
Development/lib/: CMakeLists.txt
Development/test/: CMakeLists.txt  test_Account.cpp  test_Category.cpp  test_Comment.cpp  test_Currency.cpp  test_Description.cpp  test_Main.cpp  test_Model_Tag.cpp  test_Payee.cpp  test_Tag.cpp  test_main.cpp
(+106 files in other folders)
